--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <script src="script/transition.js" defer></script>
     <script src="script/animation.js" defer></script>
 
-    <link rel="stylesheet" href="/estilos/style_global.css" />
-    <link rel="stylesheet" href="/estilos/style_header.css" />
-    <link rel="stylesheet" href="/estilos/style_index.css" />
-    <link rel="stylesheet" href="/estilos/style_about.css" />
+    <link rel="stylesheet" href="estilos/style_global.css" />
+    <link rel="stylesheet" href="estilos/style_header.css" />
+    <link rel="stylesheet" href="estilos/style_index.css" />
+    <link rel="stylesheet" href="estilos/style_about.css" />
     <link rel="stylesheet" href="estilos/style_skill.css" />
     <link rel="stylesheet" href="estilos/style_portafolio.css" />
     <link rel="stylesheet" href="estilos/style_contact.css" />
