--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
               </div>
               <div class="button">
                 <a
-                  href="https://drive.google.com/uc?export=download&id=1K_GSArOdcPZG8eV9unsp1cOMqw0igs37"
-                  download="CV - Ronald Mera.pdf"
+                  href="https://drive.google.com/uc?export=download&id=1ZHw1NcihRIFXhD0iWaDgteJfpN1cNAcj"
+                  download="CV-Ronald Mera.pdf"
                   >Descargar CV</a
                 >
               </div>
@@ -122,16 +122,17 @@
                 <p class="child">
                   Mi dedicación al aprendizaje me motivó a superar desafíos como
                   ingresar al SENA luego de varios intentos y mejorar
-                  continuamente mis habilidades técnicas. Actualmente me dedico
-                  al desarrollo de aplicaciones web y diseño web responsive
+                  continuamente mis habilidades técnicas. Actualmente, me dedico
+                  al desarrollo de aplicaciones web y al diseño web responsive,
                   utilizando herramientas como
-                  <strong>HTML, CSS y JavaScript básico</strong>. Además, manejo
-                  el framework <strong>Laravel</strong> y bases de datos
-                  relacionales como <strong>MySQL</strong> y
-                  <strong>PostgreSQL</strong> . También tengo conocimientos
-                  básicos de bases de datos NoSQL como MongoDB y siempre estoy
-                  ansioso por aprender nuevas tecnologías y métodos para
-                  optimizar mis proyectos y brindar mejores soluciones.
+                  <strong>HTML, CSS y JavaScript básico</strong>. Además, cuento
+                  con experiencia en <strong>Java</strong>, el framework
+                  <strong>Laravel</strong> y bases de datos relacionales como
+                  <strong>MySQL</strong> y <strong>PostgreSQL</strong>. También
+                  tengo conocimientos básicos en bases de datos NoSQL, como
+                  <strong>MongoDB</strong>, y siempre estoy motivado a aprender
+                  nuevas tecnologías y métodos para optimizar mis proyectos y
+                  ofrecer mejores soluciones.
                 </p>
                 <p class="child">
                   Mi objetivo es convertirme en un desarrollador completo,
@@ -234,7 +235,7 @@
               >Envíame un correo</a
             >
             <a
-              href="https://www.linkedin.com/in/tu-perfil"
+              href="https://www.linkedin.com/in/ronald-mera-330683315"
               target="_blank"
               class="linkedin_link"
               >Conéctate conmigo en LinkedIn</a
