--- a/index.html
+++ b/index.html
@@ -209,7 +209,12 @@
                 Colaboración en sitio web enfocado en el cuidado estético y la
                 salud de las mujeres.
               </p>
-              <a href="#" class="project-link" target="_blank">Ver en GitHub</a>
+              <a
+                href="https://github.com/HaJuegos/WellWoman"
+                class="project-link"
+                target="_blank"
+                >Ver en GitHub</a
+              >
             </div>
           </div>
         </div>
