footer text update

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     <footer>
       <div class="footer-container">
         <div class="copy">
-          <p>&copy; 2024 Ronald Mera Hurtado. All rights reserved.</p>
+          <p>&copy; 2025 Ronald Mera Hurtado. Todos los derechos reservados.</p>
         </div>
         <div class="links">
           <a href="https://wa.me/+573005791413" target="blank"
