--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
                 continuamente mis habilidades técnicas. Actualmente, me dedico
                 al desarrollo de aplicaciones web y al diseño web responsive,
                 utilizando herramientas como
-                <strong>HTML, CSS y JavaScript básico</strong>. Además, cuento
-                con experiencia en <strong>Java</strong>, el framework
-                <strong>Laravel</strong> y bases de datos relacionales como
-                <strong>MySQL</strong> y <strong>PostgreSQL</strong>. También
+                <em><strong>HTML, CSS y JavaScript básico</strong></em>. Además, cuento
+                con experiencia en <em><strong>Java</strong></em>, el framework
+                <em><strong>Laravel</strong></em> y bases de datos relacionales como
+                <em><strong>MySQL</strong></em> y <em><strong>PostgreSQL</strong></em>. También
                 tengo conocimientos básicos en bases de datos NoSQL, como
-                <strong>MongoDB</strong>, y siempre estoy motivado a aprender
+                <em><strong>MongoDB</strong></em>, y siempre estoy motivado a aprender
                 nuevas tecnologías y métodos para optimizar mis proyectos y
                 ofrecer mejores soluciones.
               </p>
