--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="container-text">
           <h2 class="child-title">Sobre Mi</h2>
           <div class="profile-info">
-            <img src="imagenes/about/mi-perfil2.png" alt="Imagen de Ronald Mera" class="profile-img" />
+            <img src="imagenes/about/fondo2.png" alt="Imagen de Ronald Mera" class="profile-img" />
             <div class="profile-text">
               <p class="child">
                 ¡Hola! Soy Ronald Mera Hurtado, un estudiante de programación
@@ -145,38 +145,45 @@
     </section>
     <!-- skills-->
     <section id="soft-skills">
-      <div class="skills-complete">
+      <!-- <picture>
+        <source media="(min-width: 800px)" srcset="imagenes/skills/lupa-grande.jpg">
+        <source media="(min-width: 600px)" srcset="imagenes/skills/lupa-mediana.jpg">
+        <source media="(min-width: 400px)" srcset="imagenes/skills/lupa-pequeña.jpg">
+        <img src="imagenes/skills/lupa-movil.jpg" alt="">
+      </picture> -->
+      <div class="skills-complete" data-aos="fade">
         <h2>Habilidades</h2>
+        <img src="imagenes/skills/people.png" alt="">
         <div class="skills-container">
-          <div class="skill" data-aos="fade-up">
+          <div class="skill">
             <h3>Trabajo en Equipo</h3>
             <p>
               Disfruto colaborar con otras personas, aportando ideas y sumando
               esfuerzos para alcanzar metas compartidas de manera efectiva.
             </p>
           </div>
-          <div class="skill" data-aos="fade-up">
+          <div class="skill">
             <h3>Organización</h3>
             <p>
               Planifico y gestiono tareas cuidadosamente, asegurándome de
               cumplir con plazos y mantener un flujo de trabajo ordenado.
             </p>
           </div>
-          <div class="skill" data-aos="fade-up">
+          <div class="skill">
             <h3>Escucha Activa</h3>
             <p>
               Me esfuerzo por entender las ideas y necesidades de los demás,
               promoviendo una comunicación abierta y efectiva.
             </p>
           </div>
-          <div class="skill" data-aos="fade-up">
+          <div class="skill">
             <h3>Colaboración</h3>
             <p>
               Me adapto fácilmente a diferentes entornos y equipos, siempre
               buscando aportar al logro de objetivos comunes.
             </p>
           </div>
-          <div class="skill" data-aos="fade-up">
+          <div class="skill">
             <h3>Aprendizaje Continuo</h3>
             <p>
               Estoy constantemente explorando nuevas tecnologías y métodos
@@ -187,7 +194,7 @@
       </div>
     </section>
 
-    <section id="portafolio" data-aos="fade-up">
+    <section id="portafolio" data-aos="fade">
       <h1>Proyectos</h1>
       <div class="container-port">
         <div class="items-port">
@@ -218,7 +225,7 @@
       </div>
     </section>
     <!-- contacto-->
-    <section id="contact" data-aos="fade-up">
+    <section id="contact" data-aos="fade">
       <div class="contact_container">
         <h2>Gracias Por Visitarme...</h2>
         <img src="imagenes/contact/grac.png" alt="" />
