--- a/index.html
+++ b/index.html
@@ -210,18 +210,18 @@
             <a href="https://github.com/HaJuegos/WellWoman" class="project-link" target="_blank">Ver en GitHub</a>
           </div>
         </div>
-        <div class="items-port">
+        <!-- <div class="items-port">
           <figure class="project-image">
             <img src="imagenes/portfolio/shaddai.ico" alt="Shaddai Food" />
           </figure>
           <div class="project-content">
             <h2>Shaddai Food</h2>
             <p>
-              Página web para un local de comidas rápidas.
+              Página web para un local de comidas rapidas ubicado en el departamento de Córdoba.
             </p>
             <a href="https://github.com/HaJuegos/WellWoman" class="project-link" target="_blank">Ver en GitHub</a>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
     <!-- contacto-->
