--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <a href="https://www.facebook.com/ronald.mera.5070" target="blank"><img src="imagenes/footer/facebook.svg"
             alt="Facebook" /></a>
         <a href="https://www.tiktok.com/@ronaldmera941?_t=8sIyYLD0C4f&_r=1" target="blank"><img
-            src="imagenes/footer/tik-tok.svg" alt="Tik Tok" /></a>
+            src="imagenes/footer/tiktok.svg" alt="Tik Tok" /></a>
         <a href="https://www.instagram.com/ronaldalme1230?igsh=YzljYTk1ODg3Zg==" target="blank"><img
             src="imagenes/footer/instagram.svg" alt="Instagram" /></a>
       </div>
