contact hand img

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <section id="contact" data-aos="fade">
       <div class="contact_container">
         <h2>Gracias Por Visitarme...</h2>
-        <img src="imagenes/contact/grac.png" alt="" />
+        <img class="hand" src="imagenes/contact/hand.svg" alt="" />
         <p>
           Me alegra que te hayas tomado el tiempo de explorar mi portafolio.
           Espero que hayas disfrutado conociéndome y mi trabajo.
