--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <a href="https://github.com/HaJuegos/WellWoman" class="project-link" target="_blank">Ver en GitHub</a>
           </div>
         </div>
-        <!-- <div class="items-port">
+        <div class="items-port">
           <figure class="project-image">
             <img src="imagenes/portfolio/shaddai.ico" alt="Shaddai Food" />
           </figure>
@@ -219,9 +219,9 @@
             <p>
               Página web para un local de comidas rapidas ubicado en el departamento de Córdoba.
             </p>
-            <a href="https://github.com/HaJuegos/WellWoman" class="project-link" target="_blank">Ver en GitHub</a>
+            <a href="https://shaddaifoodtuchin.netlify.app/" class="project-link" target="_blank">Ver Página</a>
           </div>
-        </div> -->
+        </div>
       </div>
     </section>
     <!-- contacto-->
