--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@
             <img src="imagenes/portfolio/shaddai.ico" alt="Shaddai Food" />
           </figure>
           <div class="project-content">
-            <h2>Shaddai Food</h2>
+            <h2>Shuddai Food</h2>
             <p>
               Página web para un local de comidas rapidas ubicado en el departamento de Córdoba.
             </p>
-            <a href="https://shaddaifoodtuchin.netlify.app/" class="project-link" target="_blank">Ver Página</a>
+            <a href="https://shuddaifoodtuchin.netlify.app/" class="project-link" target="_blank">Ver Página</a>
           </div>
         </div>
       </div>
