--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         </div>
         <div class="items-port">
           <figure class="project-image">
-            <img src="imagenes/portfolio/shaddai.ico" alt="Shaddai Food" />
+            <img src="imagenes/portfolio/shuddai.ico" alt="Shuddai Food" />
           </figure>
           <div class="project-content">
             <h2>Shuddai Food</h2>
