--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                   alt="whatsapp" /></a>
             </div>
             <div class="button">
-              <a href="https://drive.google.com/uc?export=download&id=1ZHw1NcihRIFXhD0iWaDgteJfpN1cNAcj"
-                download="CV-Ronald Mera.pdf">Descargar CV</a>
+              <a href="https://drive.google.com/uc?export=download&id=1rtW0hgfJ2ctboAShpFouBpB5OQnoBq1K"
+                download="Ronald Mera.pdf">Descargar CV</a>
             </div>
           </div>
         </div>
