--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
   <header>
     <div class="container">
-      <div class="title">Portafolio</div>
+      <div class="title">Ronald Dev</div>
       <nav>
         <ul class="nav-links" id="nav-links">
           <li><a href="#index">Inicio</a></li>
