--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                   alt="whatsapp" /></a>
             </div>
             <div class="button">
-              <a href="https://drive.google.com/uc?export=download&id=1rtW0hgfJ2ctboAShpFouBpB5OQnoBq1K"
-                download="Ronald Mera.pdf">Descargar CV</a>
+              <a href="https://drive.google.com/uc?export=download&id=17GAQwtPl9EsprDuKb8HgtVLVbo4gTknu"
+                download="CV Ronald Mera.pdf">Descargar CV</a>
             </div>
           </div>
         </div>
